examples/bad/5-if.emm
int main() {
  if (true) {
    int x = 3;
  }
  //print(x);
  if (false) return 0;
}
